--- a/base.css
+++ b/base.css
@@ -1,10 +1,9 @@
 /* html reset */ 
-body, h1, h2, h3, h4, h5, h6, pre, p, blockquote, address, dl, dt, dd, ul, ol, li, table, caption, th, td, form, fieldset, legend { margin: 0; padding: 0; }
+body, h1, h2, h3, h4, h5, h6, pre, p, blockquote, address, dl, dt, dd, table, caption, th, td, form, fieldset, legend { margin: 0; padding: 0; }
 h1, h2, h3, h4, h5, h6 { font-size: 1em; }
 img, fieldset, abbr, acronym { border: 0; }
 address { font-style: normal; } 
 table { border-collapse: collapse; border-spacing: 0; }
-ul, ol { list-style: none; }
 
 
 /* global styles */
@@ -18,8 +17,6 @@ p, dd { margin-bottom: 1em; }
 	
 hr { height: 1px; border: 0; border-top: 1px solid; margin-bottom: 1em; clear: both; }
 
-dt { font-weight: bold; }
-
 td { vertical-align: top; }
 tbody th { text-align: left; }
 
@@ -27,10 +24,14 @@ sup, sub { vertical-align: 0; position: relative; }
 sup { bottom: 1ex; }
 sub { top: 0.8ex; }
 
-input, select, button { vertical-align: middle; font-family: inherit; font-size: 1em; } 
+input, select, button { vertical-align: middle; font-family: inherit; font-size: 1em; line-height: normal; } 
 textarea { font-family: inherit; font-size: 1em; overflow: auto; }
 input[type="checkbox"] { vertical-align: bottom; }
 input[type="button"], input[type="submit"], button { cursor: pointer; }
 input[type="search"] { -webkit-appearance: textfield; -webkit-box-sizing: content-box; }
 ::-webkit-search-decoration { display: none; }
 ::-webkit-input-placeholder { color: inherit; }
+
+blockquote { margin: 1em 40px; }
+ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
+ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
