Edited base.css via GitHub

--- a/base.css
+++ b/base.css
@@ -28,6 +28,7 @@ input, select, button { vertical-align: middle; font-family: inherit; font-size:
 textarea { font-family: inherit; font-size: 1em; overflow: auto; }
 input[type="checkbox"] { vertical-align: bottom; }
 input[type="button"], input[type="submit"], button { cursor: pointer; }
+input[disabled], button[disabled] { cursor: default; }
 input[type="search"] { -webkit-appearance: textfield; -webkit-box-sizing: content-box; }
 ::-webkit-search-decoration { display: none; }
 ::-webkit-input-placeholder { color: inherit; }
