--- a/base.css
+++ b/base.css
@@ -1,37 +1,55 @@
-/* html reset */ 
-body, h1, h2, h3, h4, h5, h6, pre, p, blockquote, address, dl, dt, dd, table, caption, th, td, form, fieldset, legend { margin: 0; padding: 0; }
+body, h1, h2, h3, h4, h5, h6, pre, p, address, li, dl, dt, dd, table, caption, th, td, form, fieldset, legend { margin: 0; padding: 0; }
 h1, h2, h3, h4, h5, h6 { font-size: 1em; }
-img, fieldset, abbr, acronym { border: 0; }
+fieldset, abbr, acronym { border: 0; }
+img { border: 0; vertical-align: middle; }
 address { font-style: normal; } 
+
 table { border-collapse: collapse; border-spacing: 0; }
-
-
-/* global styles */
-html { overflow-y: scroll; }
-
-body { line-height: 1.5; }
-
-h1, h2, h3, h4, h5, h6, li { line-height: 1.25; }
-
-p, dd { margin-bottom: 1em; }	
-	
-hr { height: 1px; border: 0; border-top: 1px solid; margin-bottom: 1em; clear: both; }
-
 td { vertical-align: top; }
 tbody th { text-align: left; }
+
+input, select, button { vertical-align: middle; font-family: inherit; font-size: 1em; line-height: normal; } 
+textarea { font-family: inherit; font-size: 1em; overflow: auto; }
+input[type="button"], input[type="submit"], input[type="reset"], button { cursor: pointer; }
+input[disabled], button[disabled] { cursor: default; }
+input[type="radio"], input[type="checkbox"] { vertical-align: 0%; }
+input[type="search"] { -webkit-appearance: none; -webkit-box-sizing: content-box; }
+::-webkit-search-decoration { display: none; }
+::-webkit-input-placeholder { color: inherit; }
 
 sup, sub { vertical-align: 0; position: relative; }
 sup { bottom: 1ex; }
 sub { top: 0.8ex; }
 
-input, select, button { vertical-align: middle; font-family: inherit; font-size: 1em; line-height: normal; } 
-textarea { font-family: inherit; font-size: 1em; overflow: auto; }
-input[type="checkbox"] { vertical-align: bottom; }
-input[type="button"], input[type="submit"], button { cursor: pointer; }
-input[disabled], button[disabled] { cursor: default; }
-input[type="search"] { -webkit-appearance: textfield; -webkit-box-sizing: content-box; }
-::-webkit-search-decoration { display: none; }
-::-webkit-input-placeholder { color: inherit; }
+
+html { overflow-y: scroll; }
+p, dd { margin-bottom: 1em; }		
+hr { height: 1px; border: 0; border-top: 1px solid; margin-bottom: 1em; clear: both; }
 
 blockquote { margin: 1em 40px; }
-ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
+ul, ol { margin: 1em 0; padding: 0 0 0 2em; }
+
+.nav ul { list-style: none; margin: 0; padding: 0; }
+
+.img img,
+.figure img { display: block; }
+
+.align-left { float: left; }
+.align-right { float: right; }
+.clear { clear: both; height: 0; line-height: 0; }
+.hidden { position: absolute; top: -9999px; left: -9999px; width: 1px; height: 1px; overflow: hidden; }
+.invisible { visibility: hidden; }
+
+td.right { text-align: right; }
+
+.header:after,
+.footer:after,
+.article:after,
+.section:after,
+.nav:after,
+.aside:after,
+
+.layout:after
+.bar:after { content: "\0020"; display: block; height: 0; clear: both; visibility: hidden; }
+
+.text { display: table-cell; }
