--- a/css/base.scss
+++ b/css/base.scss
@@ -79,6 +79,17 @@ label {
   line-height: normal;
 }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+
 
 
 /* ==========================================================================
