--- a/css/base.scss
+++ b/css/base.scss
@@ -112,8 +112,7 @@ th {
   *:first-letter,
   *:first-line {
     background: transparent !important;
-    color: #000 !important; /* Black prints faster:
-    http://www.sanbeiji.com/archives/953 */
+    color: #000 !important;
     box-shadow: none !important;
     text-shadow: none !important;
   }
